k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkinds
  labels:
    name: jenkinds
    app: jenkinds
